--- a/conf/data/base.yaml
+++ b/conf/data/base.yaml
@@ -1,4 +1,4 @@
-name: V0
-categorical_encoder: ordinal # ordinal, onehot
+name: V1
+categorical_encoder: onehot # ordinal, onehot
 continuous_encoder: null # standard, minmax
 test_size: 0.2
