--- a/conf/data/base.yaml
+++ b/conf/data/base.yaml
@@ -1,4 +1,4 @@
 name: V2
-categorical_encoder: onehot # ordinal, onehot
+categorical_encoder: ordinal # ordinal, onehot
 continuous_encoder: null # standard, minmax
 test_size: 0.2
