--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ lightgbm = "^4.3.0"
 pandas = "^2.2.1"
 matplotlib = "^3.8.4"
 opencv-python = "^4.9.0.80"
+catboost = "^1.2.5"
 
 
 [build-system]
