--- a/conf/model/params/catboost.yaml
+++ b/conf/model/params/catboost.yaml
@@ -4,5 +4,6 @@ learning_rate: null
 border_count: null
 random_strength: null
 bagging_temperature: null
-od_type: 'IncToDec'
-od_wait: 10
+# od_type: 'IncToDec'
+od_type: 'Iter'
+# od_wait: 10 
