--- a/conf/model/params/catboost.yaml
+++ b/conf/model/params/catboost.yaml
@@ -7,3 +7,6 @@ bagging_temperature: null
 # od_type: 'IncToDec'
 od_type: 'Iter'
 # od_wait: 10 
+# subsample: null
+# colsample_bylevel: null
+# min_data_in_leaf: null
